Fix overflowing with longer names

--- a/frontend/src/components/popup/PopUpDelete.scss
+++ b/frontend/src/components/popup/PopUpDelete.scss
@@ -17,11 +17,12 @@
 		background-color: $component-color;
 		box-shadow: $component-shadow;
 		border-radius: 0.4rem;
-		height: 4.8rem;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		font-size: 2.2rem;
+		padding: 0.8rem;
+		min-height: 4.8rem;
 	}
 
 	&__actions {
