--- a/frontend/src/components/table/FolderTableElement.scss
+++ b/frontend/src/components/table/FolderTableElement.scss
@@ -6,9 +6,11 @@
 	gap: 0.8rem;
 	padding-left: 1.2rem;
 	color: $text-color-disable;
+	margin: 0.6rem 0;
 	transition: color 0.15s ease-in-out;
 
 	&__icon-container {
+		flex-shrink: 0;
 		position: relative;
 		width: 2.4rem;
 		height: 2.4rem;
